# fttapp

./: .env  .env.development  .env.prod  .env.staging  .eslintrc.json  README.md  bun.lockb  eslint.config.js  index.html  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
algorithm/cpp/: CMakeCache.txt  CMakeLists.txt
algorithm/cpp- new/: CMakeLists.txt  ThroatUnwrap.cpp  ThroatUnwrap.h  main.cpp
algorithm/cpp- new/results/: test_CreateCylinderWithCut_1.txt  test_CreateCylinderWithCut_2.txt  test_CreateCylinderWithCut_3.txt  test_UnwrapCylinder_1.txt  test_UnwrapCylinder_2.txt  test_UnwrapCylinder_3.txt  test_sample_on_spiral_2.txt  test_sample_on_spiral_3.txt
algorithm/cpp/src/: ThroatUnwrap.cpp  ThroatUnwrap.h  main.cpp
algorithm/ts/: ThroatUnwrap.ts  main-pdf.ts  main-pdf2.ts  main.ts  test2.ps  testCreateCylinderWithCut.ts  testSampleOnSpiral.ts  testUnwrapCylinder.ts
algorithm/ts/results/: test_createCylinderWithCut_1.txt  test_createCylinderWithCut_2.txt  test_createCylinderWithCut_3.txt  test_sample_on_spiral_1.txt  test_sample_on_spiral_2.txt  test_sample_on_spiral_3.txt  test_unwarp_cylinder_1.txt  test_unwarp_cylinder_2.txt  test_unwarp_cylinder_3.txt
src/: App.tsx  App.vue  index.css  main.tsx
src/algorithm/: ThroatUnwrap.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/controls/: page-controls.tsx  parameter-controls.tsx
src/components/controls/export-controls/: export-controls-schema.ts
src/components/header/: header.tsx
src/components/patterns/: grid-pattern.tsx
src/components/preview/: preview.tsx
src/components/ui/: button.tsx  form.tsx  input.tsx  magic-card.tsx  number-input.tsx  password-input.tsx  select.tsx  tabs.tsx  toggle-group.tsx  tooltip.tsx
src/modules/auth/components/: password-checklist.tsx  signin-form.tsx  signup-form.tsx  view.tsx
src/modules/auth/schema/: auth.schema.ts
src/modules/controls/components/: page-controls.tsx  parameter-controls.tsx
src/modules/controls/data/: control-options.ts
src/modules/controls/schemas/: page-controls-schema.ts  parameter-schema.ts
src/modules/footer/components/: footer.tsx
src/modules/header/: export-file-button.tsx  header.tsx  print-file-button.tsx  share-button.tsx
src/modules/pdf/: constants.ts  createPDF.ts
src/modules/preview/components/: error-boundary.tsx  pdf-viewer.tsx  preview.tsx  three-d-viewer.tsx
src/modules/store/: store.ts  store.tsx
src/router/: ProtectedRoute.tsx  routes.ts
src/views/: CylinderComponent.vue
